[metadata]
name = plover_stenograph_wifi
version = 0.0.1
description = Stenograph Wi-Fi protocol for Diamanté and Luminex machines for Plover
long_description = file: README.rst
author = Stanley Sakai + Ted Morin
author_email = stanley@stanographer.com + morinted@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/stanographer/plover_stenograph_wifi
classifiers =
	Development Status :: 1 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = True
tests_require =
	mock
install_requires =
	plover>=4.0.0.dev5
	more_itertools>=6.0.0
py_modules =
	plover_stenograph_wifi

[options.entry_points]
plover.machine =
	Stenograph Wi-Fi = plover_stenograph_wifi:Stenograph

# vim: commentstring=#\ %s list